# filevector

./: .gitignore  Makefile  Makefile.am  configure.ac
docs/: Changelog  README.fvlib  text2fvf.txt
docs/dev/: filevector_general_specification_2009.12.27.doc  filevector_prototype_2009.12.27.h
filevector/fvfutil/: mergevars.h  text2fvf.h
filevector/local/stiv/: rTests.sh
filevector/local/stiv/speedTests/: randE_ff.R  randVar_bigmem.R  randVar_ff.R  testCache
filevector/tests/: BuildTestData.cpp  ConvertTest.cpp  ReadSpeed.cpp  TransposeTest.h
filevector/tests/data/: readme.txt
fvfutil/: convert.cpp  fv2text.cpp  mergevars.cpp  mergevars.h  text2fvf.cpp  text2fvf.h  text2fvf_main.cpp  transpose.cpp  transpose.h  transpose_main.cpp  usage.cpp  usage.h
fvlib/: AbstractMatrix.cpp  AbstractMatrix.h  CastUtils.cpp  CastUtils.h  DatABELBaseCPP.cpp  DatABELBaseCPP.h  FileVector.cpp  FileVector.h  FilteredMatrix.cpp  FilteredMatrix.h  Logger.cpp  Logger.h  Makefile.am  RealHandlerWrapper.cpp  RealHandlerWrapper.h  ReusableFileHandle.cpp  ReusableFileHandle.h  Transposer.cpp  Transposer.h  convert_util.cpp  convert_util.h  filevector.cpp  filevector.h  filevector.pc.in  frerror.cpp  frerror.h  frutil.cpp  frutil.h  frvector.cpp  frvector.h  frversion.h  fvutil.cpp  transpose.cpp  transpose.h
local/stiv/: filtered.R  installDatABEL.sh  rTests.sh
local/stiv/speedTests/: bigmem_test_3000.R  ff_test_3000.R  fv_test_3000.R  linear.R  linear2  randE.R  randE_bigmem.R  randVar_fv.R  some.xls  speed_compare.doc  transpose_sh
tests/: AccessModeTest.cpp  AccessModeTest.h  BuildTestData.cpp  ConvertTest.cpp  ConvertTest.h  CorrectnessTest.cpp  CorrectnessTest.h  FVUnitTest.cpp  FVUnitTest.h  FileModificationTest.cpp  FileModificationTest.h  ReadSpeed.cpp  ReadVariableTest.cpp  ReadVariableTest.h  ReusableFileHandleTest.cpp  ReusableFileHandleTest.h  TestUtil.cpp  TestUtil.h  TransposeTest.cpp  TransposeTest.h  UnitTest.cpp  UnitTest.h  WriteVariablesSpeed.cpp  perftests.sh
tests/data/: readme.txt
