#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(LibFilevector, 0.1.0, genabel-devel@r-forge.wu-wien.ac.at)
AC_CONFIG_SRCDIR([fvlib/AbstractMatrix.cpp])
AC_CONFIG_HEADERS([config.h fvlib/filevectorconfig.h])
AM_INIT_AUTOMAKE([silent-rules])
AM_SILENT_RULES([yes])

# Checks for programs.
AC_PROG_CXX

if test -z "$CXXFLAGS"; then
   # User did not set CXXFLAGS, so we can put in our own defaults
    CXXFLAGS="-g -O2"
fi
if test -z "$CPPFLAGS"; then
   # User did not set CPPFLAGS, so we can put in our own defaults
    CPPFLAGS="-Wall -D_NOT_R_FILEVECTOR"
fi
# If CXXFLAGS/CPPFLAGS are already set AC_PROG_CXX will not overwrite them
# with its own defaults
AC_PROG_CXX

# Since most of our code is in C++, set that language as the default
# for the subsequent checks
AC_LANG_PUSH([C++])

AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

# For making libraries
LT_INIT

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([limits.h memory.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([memmove memset strdup])

# Suggested by autoreconf
AC_CONFIG_MACRO_DIR([m4])

# Define these substitions here to keep all version information in one place.
# For information on how to properly maintain the library version information,
# refer to the libtool manual, section "Updating library version information":
# http://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html
AC_SUBST([FV_SO_VERSION], [0:1:0])
AC_SUBST([FV_API_VERSION], [0.1])

# Files to be generated by autotools
# Override the template file name of the generated .pc file, so that there
# is no need to rename the template file when the API version changes.
AC_CONFIG_FILES([
        Makefile
        fvlib/Makefile
        fvlib/filevector-${FV_API_VERSION}.pc:fvlib/filevector.pc.in
])

AC_OUTPUT
